--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
   padding-top: 70px;
 }
 
-
 /**
 * selector: col-md-4 osztály
 * 4. alsó padding: 20 pixel
@@ -29,7 +28,6 @@
   color: white;
 }
 
-
 /**
 * selector: mt oszály
 * 6. igazítás: balra
@@ -41,7 +39,6 @@
   margin-top: -20px;
   padding-top: 20px;
 }
-
 
 .bg-blue-ui {
   background-color: #708198 !important;
@@ -84,13 +81,9 @@ figure img{width:300px;}
   height: 8px;
 }
 
-
 .blog .carousel-indicators .active {
   background: #0fc9af;
 }
-
-
-
 
 .item-carousel-blog-block {
   outline: medium none;
@@ -123,6 +116,7 @@ figure img{width:300px;}
 * 22. jobbról: 8 pixel
 * 23. háttérszín: 41cb52
 */
+
 .item-box-blog-date{
   position: absolute;
   z-index: 5;
@@ -131,7 +125,6 @@ figure img{width:300px;}
   right:8px;
   background: #41cb52;
 }
-
 
 .item-box-blog-date span {
   color: #fff;
@@ -166,7 +159,6 @@ figure img{width:300px;}
   text-decoration: none;
   transition: color .3s;
 }
-
 
 .item-box-blog-heading a {
     text-decoration: none;
@@ -203,4 +195,6 @@ figure img{width:300px;}
 * btn, bg-blue-ui, white, read osztályokhoz
 * 28. doboz árnyék: x irány 0, y irány 5 pixel, méret 15 pixel, belső árnyék, szín 4d5f77
 */
-
+btn.bg-blue-ui.white.read{
+  box-shadow: 0 5px 15px inset #4d5f77;
+}
